--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,12 +44,12 @@
 
       <!-- 광고2 -->
       <div class="ad ad2">
-          <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+          <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js11111111111111"></script>
           <!-- Ad Unit 2 -->
           <ins class="adsbygoogle"
                style="display:block"
-               data-ad-client="ca-pub-9374368296307755"
-               data-ad-slot="9952845435"
+               data-ad-client=zz
+               data-ad-slot=zz
                data-ad-format="auto"
                data-full-width-responsive="true"></ins>
           <script>
