--- a/mbti/style.css
+++ b/mbti/style.css
@@ -18,6 +18,17 @@ body {
     top: 20px;
     right: 20px;
     z-index: 1000;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+}
+
+.language-selector label {
+    color: white;
+    font-size: 12px;
+    margin-bottom: 5px;
+    font-weight: 500;
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
 }
 
 .language-selector select {
